[gd_scene load_steps=2 format=3 uid="uid://bs6w88opxlj76"]

[ext_resource type="Script" path="res://menu/menu_script/add_element_menu.gd" id="1_q72hl"]

[node name="add_element_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.996599, 1.00186)
mouse_filter = 2
script = ExtResource("1_q72hl")
metadata/_edit_vertical_guides_ = [843.0, 1152.0]
metadata/_edit_horizontal_guides_ = [334.0, 600.0, 60.0, 325.0]

[node name="window" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.094
anchor_right = 1.0
anchor_bottom = 0.924
offset_left = -309.0
offset_top = 0.0879974
offset_right = 1.0
offset_bottom = 0.247986
grow_horizontal = 0
grow_vertical = 2
color = Color(0.411765, 0.360784, 0.52549, 1)

[node name="list_items" type="ItemList" parent="window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 52.0
offset_right = -5.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9653, 0.913868)

[node name="MarginContainer" type="MarginContainer" parent="window"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_right = 174.0
offset_bottom = 38.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="window/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="spot_button" type="Button" parent="window/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Spots"

[node name="structure_button" type="Button" parent="window/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Structures"

[node name="decoration_button" type="Button" parent="window/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DÃ©corations"

[node name="valid_button" type="Button" parent="window"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.5
offset_top = -31.0
offset_right = 31.5
grow_horizontal = 2
grow_vertical = 0
text = "Valider"

[node name="retract_button_open" type="Button" parent="window"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.49
anchor_bottom = 0.49
offset_left = -0.123135
offset_top = -37.1547
offset_right = 17.8769
offset_bottom = 36.8453
grow_vertical = 2
theme_override_colors/font_color = Color(0.219608, 0.380392, 0.686275, 1)
text = ">"

[node name="retract_button_close" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.001
anchor_top = 0.5
anchor_right = 1.001
anchor_bottom = 0.5
offset_left = -18.2925
offset_top = -37.5328
offset_right = -0.29248
offset_bottom = 36.4672
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.219608, 0.380392, 0.686275, 1)
text = "<"

[connection signal="pressed" from="window/MarginContainer/HBoxContainer/spot_button" to="." method="_on_spot_button_pressed"]
[connection signal="pressed" from="window/MarginContainer/HBoxContainer/structure_button" to="." method="_on_structure_button_pressed"]
[connection signal="pressed" from="window/MarginContainer/HBoxContainer/decoration_button" to="." method="_on_decoration_button_pressed"]
[connection signal="pressed" from="window/valid_button" to="." method="_on_valid_button_pressed"]
[connection signal="pressed" from="window/retract_button_open" to="." method="_on_retract_button_open_pressed"]
[connection signal="pressed" from="retract_button_close" to="." method="_on_retract_button_close_pressed"]
